# cpp-storyteller

./: .Clang-format  .proman-cli.mjs  CMakeLists.txt  LICENCE  README.md  main.cpp  package.json  pnpm-lock.yaml  proman.cmd  proman.mjs  proman.sh  utils.cpp
.github/workflows/: workspace-ci.yaml
.proman/: .main.mjs  scripts.mjs
src/: main.cpp
src/utils/: output.cpp
